--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,7 @@
 [deps]
 CompariMotif = "aecef331-8c7a-44c4-b913-ba8debb6e116"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+
+[compat]
+julia = "1.10"
+Documenter = "1"
