--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,4 +1,12 @@
 [deps]
-Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
-JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
+TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
+
+[compat]
+julia = "1.10"
+Documenter = "1"
+TestItemRunner = "1"
+TestItems = "1"
